--- a/static_root/package.json
+++ b/static_root/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "requirejs": "~2.1.22",
     "jquery": "~2.1.4",
-    "d3": "~3.5.12"
+    "d3": "~3.5.12",
+    "backbone": "~1.2.3"
   }
 }
